changes scala changes